<resources>
    <string name="app_name">My Zuri</string>
    <string name="backarrow">backArrow</string>
    <string name="sign_in">Sign In</string>
    <string name="hi_user_welcome_back">Hi User, Welcome Back</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_user">Welcome User</string>
    <string name="control">Control</string>
    <string name="account">Account</string>
    <string name="monitor">Monitor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeUser">Welcome, User</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="z_u_r_i_f_a_r_m">Z-U-R-I-F-A-R-M</string>
    <string name="none">none</string>
    <string name="null_zero">0.00</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="soil_moisture">Soil Moisture</string>
    <string name="carbon_oxide">Carbon Oxide</string>
    <string name="back">back</string>
    <string name="account_info">Account Info</string>
    <string name="f_a_r_m">Z-U-R-I-F-A-R-M</string>
    <string name="control_panel">Control Panel</string>
    <string name="pump_control">Pump Control</string>
    <string name="fan_control">FAN CONTROL</string>
    <string name="set_irrigation">SET IRRIGATION</string>
    <string name="set_time">Set Time</string>
    <string name="irrigation_scheduled_at">Irrigation scheduled at:</string>
    <string name="_12_45">12:45</string>
</resources>