<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.SigningActivity">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/backarrow"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="36sp"
        android:fontFamily="@font/josefinsans_bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_user_welcome_back"
        android:textSize="24sp"
        android:fontFamily="@font/josefinsans_medium"
        android:textColor="@color/black"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:lottie_rawRes="@raw/paper_sign"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:startIconDrawable="@drawable/email_icon"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/loginEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_your_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_pass"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/loginPass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:hint="@string/enter_your_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:fontFamily="@font/josefinsans_bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:fontFamily="@font/josefinsans_regular"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpTv"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:fontFamily="@font/josefinsans_bold"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>