<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.ControlFragment">


            <View
                android:id="@+id/controlBar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/control_panel"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/josefinsans_bold"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_controlpanel"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/none"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/z_u_r_i_f_a_r_m"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/josefinsans_bold"
                tools:ignore="RelativeOverlap" />


            <RelativeLayout
                android:id="@+id/pump_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/controlBar"
                android:background="@drawable/rounded_corners_white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/pump_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pump_control"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/josefinsans_bolditalic"
                    android:textAllCaps="true"
                    tools:ignore="RelativeOverlap" />


                <ImageView
                    android:id="@+id/img_pump"
                    android:layout_below="@id/pump_txt"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_pump"
                    android:contentDescription="@string/none"/>

                <Switch
                    android:id="@+id/myPumpSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="40dp"
                    android:thumb="@drawable/thumb"
                    android:track="@drawable/track"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fan_section"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/rounded_corners_white"
                android:layout_below="@id/pump_layout"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/fan_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fan_control"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/josefinsans_bolditalic"
                    android:textAllCaps="true"
                    tools:ignore="RelativeOverlap" />


                <ImageView
                    android:id="@+id/img_fan"
                    android:layout_below="@id/fan_txt"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_pump"
                    android:contentDescription="@string/none"/>

                <Switch
                    android:id="@+id/myFanSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="40dp"
                    android:thumb="@drawable/thumb"
                    android:track="@drawable/track"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/fan_section"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_white"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:elevation="10dp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/irrigation_timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_irrigation"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/josefinsans_bolditalic"/>

                <TextView
                    android:id="@+id/irrigation_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/irrigation_timePicker"
                    android:text="@string/irrigation_scheduled_at"
                    android:textSize="16sp"
                    android:fontFamily="@font/josefinsans_medium"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/irrigation_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/irrigation_info"
                    android:text="@string/_12_45"
                    android:textSize="30sp"
                    android:fontFamily="@font/josefinsans_medium"
                    android:textColor="@color/green"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/set_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/irrigation_time"
                    android:text="@string/set_time"
                    android:textAllCaps="true"
                    android:fontFamily="@font/josefinsans_bold"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/green"/>


            </RelativeLayout>


</RelativeLayout>